[package]
name = "oin"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rand_core = "0.5.1"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.3"
features = ["serde"]